removed unused files

--- a/html/index.html
+++ b/html/index.html
@@ -35,21 +35,16 @@
         <main>
             <div class="container">
                 <div class="pop-up">
-                    <h3>Hello, User <button id="close-popup"><i class="fa-solid fa-x"></i></button></h3>
-                    <p>Instructions:</p>
-                    <p>
-                        <br> 
-                        To rotate the view of the bike click on the 'Start' animation button.
-                        Stop the animation by cliking the 'Stop' button.
-                    </p>
+                    <h3>Game Over<button id="close-popup"><i class="fa-solid fa-x"></i></button></h3>
+                    <p></p>
                 </div>
                 <h3>Dice Game</h3>
                 <section>
                     <div id="game">
                     </div>
                     <div class="buttons">
-                        <button id="start-button">New Game</button>
-                        <button id="stop-button">Roll Dice</button>
+                        <button id="new-game">New Game</button>
+                        <button id="roll-dice">Roll Dice</button>
                     </div>
                 </section>
             </div>
@@ -69,7 +64,7 @@
                 </div>
             </div>
         </footer>
-        <p  class="copyright">© 2024 Andres Arevalo - Surprise and Balloons </p>
+        <p  class="copyright">© 2024 Andres Arevalo - BCIT Student </p>
     </div>
 </body>
 </html>
