created Dice and DiceSet classes

--- a/html/index.html
+++ b/html/index.html
@@ -8,6 +8,8 @@
     <script src="https://kit.fontawesome.com/a531af1b8d.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
     <script src="../scripts/utils.js" defer="defer"></script>
+    <script src="../scripts/Dice.js" defer="defer"></script>
+    <script src="../scripts/DiceSet.js" defer="defer"></script>
     <script src="../scripts/main.js" defer="defer"></script>
 
     <!--Google fonts-->
